test/types/file/closeStdin.good
closeStdin.chpl:3: error: halt reached - ***Error: You may not close "stdin"***
