test/types/file/closeStdin.chpl
var  fin : file = stdin;

fin.close;
